[package]
name = "xthree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
ouroboros = "0.18.4"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
